# server/src/credits/dto/index.ts
@@ -5,3 +5,4 @@ export * from './purchase-request.dto';
 export * from './purchase-response.dto';
 export * from './reward-request.dto';
 export * from './reward-response.dto';
+export * from './admin-transaction-history-response.dto';
